--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
       <div class="wrapper">
         <div class="item">
 		    <div class="iframe">
-			    <iframe src="https://player.twitch.tv/?channel=nickmercs&parent=soujisama.github.io"/></iframe>
+			    <iframe src="https://player.twitch.tv/?channel=nickmercs&parent=sahedron.github.io"/></iframe>
 		    </div>
           </div>
         <div class="item">
@@ -136,7 +136,7 @@
           </div>
     <div class="item">
 		    <div class="iframe">
-			    <iframe src="https://player.twitch.tv/?channel=nickmercs&parent=soujisama.github.io"></iframe>
+			    <iframe src="https://player.twitch.tv/?channel=nickmercs&parent=sahedron.github.io"></iframe>
 		    </div>
           </div>
 <div class="item">
