--- a/index.html
+++ b/index.html
@@ -1,134 +1,143 @@
 <html class="no-js">
-    <head>
-        <meta charset="utf-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title></title>
-        <meta name="description" content="">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <style>
-          /* iframe */
-
-.iframe {
-  border: 3px solid #131C28;
-  overflow: hidden;
-  background: #fff;
-}
-
-.iframe iframe {
-  width: 100%;
-  height: 400px;
-  border: 0;
-  display: block;
-}
-
-.iframe-header {
-  display: none;
-}
-
-.js .iframe-header {
-  display: block;
-}
-
-.iframe-content {
-  /* ipad iframe hack */
-  height: 400px;
-  overflow: auto;
-  -webkit-overflow-scrolling: touch;
-}
-
-.iframe-header a {
-  font-size: 15px;
-  color: white;
-  background: #3B4658;
-  display: block;
-  padding: 15px;
-  text-align: center;
-  border-bottom: 3px solid #131C28;
-}
-
-.iframe-header a:hover,
-.iframe-header a:focus {
-  background: #6A798E;
-}
-
-.iframe-full-screen .iframe-header {
-  display: block;
-  position: absolute;
-  height: 50px;
-  width: 100%;
-}
-
-.iframe-full-screen .iframe-content {
-  position: absolute;
-  top: 50px;
-  bottom: 0;
-  width: 100%;
-  height: auto;
-}
-
-.iframe-full-screen .iframe-header a {
-  padding: 0;
-  height: 44px;
-  line-height: 44px;
-  text-align: center;
-  border: 3px solid #131C28;
-}
-
-.iframe-full-screen body {
-  width: 100%;
-  height: 100%;
-  overflow: hidden;
-}
-
-.iframe-full-screen .iframe.iframe-active{
-  width: 100%;
-  height: 100%;
-  position: fixed;
-  left: 0;
-  top: 0;
-  bottom: 0;
-  right: 0;
-  z-index: 9999;
-  border: none;
-}
-
-.iframe-full-screen .iframe iframe {
-  position: absolute;
-  height: 100%;
-  width: 100%;
-  border: none;
-}
-
-.wrapper {
-  max-width: 1000px;
-  margin: 20px auto;
-  padding: 0 20px;
-  display: flex;
-  flex-wrap: wrap
-}
-
-.item {
-    display: inline-block;
-    flex: 1 300px;
-}
-
-@media all and (max-height: 400px){
-  .iframe {
-    height: 300px;
-  }
-}
-        </style>
-        <script>
-            // document.getElementsByTagName("html")[0].className = "js";
-        </script>
-    </head>
-    <body>
+   <head>
+      <meta charset="utf-8">
+      <meta http-equiv="X-UA-Compatible" content="IE=edge">
+      <title></title>
+      <meta name="description" content="">
+      <meta name="viewport" content="width=device-width, initial-scale=1">
+      <style>
+         /* iframe */
+         .iframe {
+         border: 3px solid #131C28;
+         overflow: hidden;
+         background: #fff;
+         }
+         .iframe iframe {
+         width: 100%;
+         height: 400px;
+         border: 0;
+         display: block;
+         }
+         .iframe-header {
+         display: none;
+         }
+         .js .iframe-header {
+         display: block;
+         }
+         .iframe-content {
+         /* ipad iframe hack */
+         height: 400px;
+         overflow: auto;
+         -webkit-overflow-scrolling: touch;
+         }
+         .iframe-header a {
+         font-size: 15px;
+         color: white;
+         background: #3B4658;
+         display: block;
+         padding: 15px;
+         text-align: center;
+         border-bottom: 3px solid #131C28;
+         }
+         .iframe-header a:hover,
+         .iframe-header a:focus {
+         background: #6A798E;
+         }
+         .iframe-full-screen .iframe-header {
+         display: block;
+         position: absolute;
+         height: 50px;
+         width: 100%;
+         }
+         .iframe-full-screen .iframe-content {
+         position: absolute;
+         top: 50px;
+         bottom: 0;
+         width: 100%;
+         height: auto;
+         }
+         .iframe-full-screen .iframe-header a {
+         padding: 0;
+         height: 44px;
+         line-height: 44px;
+         text-align: center;
+         border: 3px solid #131C28;
+         }
+         .iframe-full-screen body {
+         width: 100%;
+         height: 100%;
+         overflow: hidden;
+         }
+         .iframe-full-screen .iframe.iframe-active{
+         width: 100%;
+         height: 100%;
+         position: fixed;
+         left: 0;
+         top: 0;
+         bottom: 0;
+         right: 0;
+         z-index: 9999;
+         border: none;
+         }
+         .iframe-full-screen .iframe iframe {
+         position: absolute;
+         height: 100%;
+         width: 100%;
+         border: none;
+         }
+         .wrapper {
+         max-width: 1000px;
+         margin: 20px auto;
+         padding: 0 20px;
+         display: flex;
+         flex-wrap: wrap
+         }
+         .item {
+         display: inline-block;
+         flex: 1 300px;
+         }
+         @media all and (max-height: 400px){
+         .iframe {
+         height: 300px;
+         }
+         }
+      </style>
+      <script>
+         // document.getElementsByTagName("html")[0].className = "js";
+      </script>
+   </head>
+   <body>
       <div class="wrapper">
-        <div class="item">
-		    <div class="iframe">
-			    <iframe src="https://player.twitch.tv/?channel=nickmercs&parent=sahedron.github.io"/></iframe>
-		    </div>
-          </div>
+         <div class="item">
+            <div class="iframe">
+               <iframe src="https://player.twitch.tv/?channel=kay_bossmajor&parent=sahedron.github.io"/></iframe>
+            </div>
+         </div>
+         <div class="item">
+            <div class="iframe">
+               <iframe src="https://player.twitch.tv/?channel=jydoremusic&parent=sahedron.github.io"/></iframe>
+            </div>
+         </div>
+         <div class="item">
+            <div class="iframe">
+               <iframe src="https://player.twitch.tv/?channel=femifil&parent=sahedron.github.io"/></iframe>
+            </div>
+         </div>
+         <div class="item">
+            <div class="iframe">
+               <iframe src="https://player.twitch.tv/?channel=koolkesh&parent=sahedron.github.io"/></iframe>
+            </div>
+         </div>
+         <div class="item">
+            <div class="iframe">
+               <iframe src="https://player.twitch.tv/?channel=sollypizzle&parent=sahedron.github.io"/></iframe>
+            </div>
+         </div>
+         <div class="item">
+            <div class="iframe">
+               <iframe src="https://player.twitch.tv/?channel=soulmanniblue&parent=sahedron.github.io"/></iframe>
+            </div>
+         </div>
       </div>
-    </body>
+   </body>
 </html>
