--- a/index.html
+++ b/index.html
@@ -135,7 +135,12 @@
          </div>
          <div class="item">
             <div class="iframe">
-               <iframe src="https://player.twitch.tv/?channel=soulmanniblue&parent=sahedron.github.io"/></iframe>
+               <iframe src="https://player.twitch.tv/?channel=soulmannieblue&parent=sahedron.github.io"/></iframe>
+            </div>
+         </div>
+         <div class="item">
+            <div class="iframe">
+               <iframe src="https://player.twitch.tv/?channel=abdul_xpensive&parent=sahedron.github.io"/></iframe>
             </div>
          </div>
       </div>
