--- a/index.html
+++ b/index.html
@@ -141,6 +141,11 @@
                <iframe src="https://player.twitch.tv/?channel=abdul_xpensive&parent=sahedron.github.io"/></iframe>
             </div>
          </div>
+         <div class="item">
+            <div class="iframe">
+               <iframe src="https://www.youtube.com/embed/live_stream?channel=UC9EglyGuFnus4Ho2JFNrSvA"/></iframe>
+            </div>
+         </div>
       </div>
    </body>
 </html>
