--- a/index.html
+++ b/index.html
@@ -84,6 +84,7 @@
             border: none;
          }
          .wrapper {
+            height: 100vh;
             display: flex;
             flex-wrap: wrap
          }
