--- a/index.html
+++ b/index.html
@@ -96,6 +96,8 @@
             .iframe {
                height: 300px;
             }
+         }
+         @media all and (max-width: 767px){
             .iframe-content {
                aspect-ratio: auto;
 	       height: 160px;
